[gd_scene load_steps=5 format=3 uid="uid://6gh6ya0uwwvd"]

[ext_resource type="Script" uid="uid://so70yknv0gy3" path="res://coin/coin.gd" id="1_0t63x"]
[ext_resource type="Texture2D" uid="uid://bktvh6oh133lx" path="res://coin/coin.png" id="1_d5gmh"]
[ext_resource type="AudioStream" uid="uid://bvrj7rvbothnw" path="res://coin/coin.mp3" id="3_v7riw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6qpsl"]
radius = 24.0

[node name="Coin" type="Area2D"]
script = ExtResource("1_0t63x")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6qpsl")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_d5gmh")

[node name="CoinNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_v7riw")
volume_db = 24.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="CoinNoise" to="." method="_on_coin_noise_finished"]
